assets/styles.css
/* ... */
/* ======== ================================================
======= End of mobile view of latest-deals styles ========
============================================================ */

/* ======== ================================================
======================== iPad ================ ========
============================================================ */
@media screen and (min-width: 768px) {
  /* html {
    font-size: 20px;
  } */
  /* ================================== */
            /* NAV iPad */
  /* ================================== */
  /* ================================== */
       /* Nonsticky-top (Black) */
  /* ================================== */
  .black {
    display: flex;
    margin-left: 106px;
  }
  .black-left li:first-child a {
    color: white;
    
  }
  /* ================================== */
       /* sticky nav -top (white) */
  /* ================================== */
  /* white ipad */
/* logo */
.tnw-box {
  position: fixed;
  top: 0; 
   z-index: 5; 
   min-height: 80px;  
  
}
.tnw-box img {
   width: 65%;
  height: 100%;
  
  position: absolute;
  top: 50%;
  left:50%;
  transform: translate(-50%, -65%);
  z-index: 40; 



  /* width: 10%;
  height: 100%;
  position: fixed;
  top: 50%;
  left:50%;
  transform: translate(-493%, -85%);
  z-index: 40; */

  /* width: 60%;
  height: 100%;
  position: sticky;
  top: 30%;
  left:50%;
  transform: translate(-50%, -50%);
  z-index: 90; */
}
/* sections */
.nSections {
  display: flex;
  margin-left: 126px;
}
.nav-icon i:last-child {
  display: none;
}
  /* ================================== */
       /* sticky annonc -top (yellow) */
  /* ================================== */
  .yellow {
    top: 48px;
    height: 33px;
  }
  .yellow p {
    font-size: 12.775px;
    text-align: left;
    margin-left: 137px;
  }
    /* ================================== */
       /* Hero (iPad) */
  /* ================================== */
  .hero {
    height: 47vw;
    width: 98vw;
    grid-template-columns: 1fr 1fr 1fr;
    grid-template-rows: 1fr 1fr;
  }

  .hero section:first-child {
    grid-column: 1/3;
    grid-row: 1/3;
    font-size: 2rem;
    line-height: -0.03rem;

    /* width: 500px;
    height: 316px; */
  }

  .hero section:nth-child(2) {
    grid-column: 3/4;
    grid-row: 1/2;

    /* width: 31.510vw;
    height: 20.052vw; */
  }

  .hero section:nth-child(3) {
    grid-column: 3/4;
    grid-row: 2/3;

    /* width: 31.510vw;
    height: 20.052vw; */
  }

     /* ================================ 
      === latest-news section iPad ===
     ================================  */

  .latest-news .content-wrap {
    grid-template-columns: 1fr 1fr 1fr;
    grid-template-rows: span 3;
  }
  .latest-news .content-wrap article {
    display: flex;
    flex-direction: column; 
  }
  .latest-news .content-wrap article .left-most { 
    margin: 0 0.8125rem 0.5125rem 0;
  }
  .latest-news .content-wrap article .left-most img {
    /* border: 1px solid red; */
    height: auto;
    max-height: ;
    width: 100%;
  }
  .latest-news .content-wrap article h2 {
    margin-right: 0.625rem;
  }

       /* ================================ 
      === latest-funding section iPad ===
     ================================  */
     .latest-funding .top ul {
      display: flex;
      justify-content: start;
      align-items: center;
      border: 1px solid green;
    }
    .latest-funding .top ul li {
      padding: 0;
      margin: 0;
      padding-bottom: 0;
    }
     .latest-funding .bottom-wrap {
      grid-template-columns: 1fr 1fr 1fr;
      grid-template-rows: 1;
    }
  /* ======== ===========================================
========= card-container styles @768px and above ========
========================================================= */

  .card-container-top {
    grid-template: repeat(5, 1fr) / repeat(2, 1fr);
    grid-template-areas:
      'card1 card2'
      'card3 card4'
      'card5 card6'
      'card7 card8'
      'card9 .';
    grid-gap: 1rem;
  }

  .card1 {
    grid-area: card1;
  }

  .card2 {
    grid-area: card2;
  }

  .card3 {
    grid-area: card3;
  }

  .card4 {
    grid-area: card4;
  }

  .card5 {
    grid-area: card5;
  }

  .card6 {
    grid-area: card6;
  }

  .card7 {
    grid-area: card7;
  }

  .card8 {
    grid-area: card8;
  }

  .card9 {
    grid-area: card9;
  }

  .categories-content-wrap .categories-first-row {
    height: 15rem;
  }

  .last-third-portion {
    bottom: -50%;
  }

  .last-third-portion h3 {
    font-size: 1rem;
    width: 95%;
    padding-top: 0;
  }

  .categories-second-row .left-most a {
    text-decoration: none;
    color: var(--orange);
    font-size: 0.8rem;
  }

  .categories-second-row .left-most h3 a{
    font-size: 0.7rem;
  }

  .categories-second-row .left-most p {
    padding: 0;
    margin: 0;
  }

  .categories-second-row .left-most h3{
    line-height: 0.6rem;
  }

  .categories-content-wrap li {
    margin: 0.2rem 0;
  }

  .categories-content-wrap li a {
    font-size: 0.7rem;
  }

  /* ======== ===========================================
====== End of card-container styles @768px and above ======
========================================================= */

/* ======== ===========================================
========= latest-deals styles @768px and above ========
======================================================= */

.card-container-bottom {
  grid-template: repeat(3, 1fr)/ repeat(3, 1fr);
  grid-template-areas: 
  "card1 card2 card3"
  "card4 card5 card6"
  "card7 card8 .";
  grid-gap: 0.3rem;
  font-size: 10px;
}

.latest-deals-card {
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  margin: 0 auto;
}

.latest-deals-card .img-box{
  width: 100%;
}

.latest-deals-card .content-box{
  width: 99%;
  font-size: 0.8rem;
}

/* ======== ===========================================
====== End of card-container styles @768px and above ======
========================================================= */

}
/* ... */

